--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>west-stress-test</finalName>
+                    <finalName>stress-test</finalName>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
